Add author information to index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 <body>
 
   <h1>🇪🇸 Práctica Oral: Leaving Cert (OL)</h1>
+<div class="authorline">
+  <b>Creado por David Martín Guerrero</b> — profesor nativo de español (Junior Cycle & Leaving Cert, Irlanda).<br/>
+  <b>Created by David Martín Guerrero</b> — native Spanish teacher (Junior Cycle & Leaving Cert, Ireland).
+</div>
   <div class="sub">Habla, transcribe y comprueba si has cubierto los puntos clave.</div>
 
   <div class="instructions">
