--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <script>
 // ===============================================
-// ¡ESTA VEZ SÍ! PEGA TU CLAVE AQUÍ ABAJO 👇
+// 👇 PEGA AQUÍ TU CLAVE (la que empieza por AIza)
 // ===============================================
 const API_KEY = "AIzaSyDpFm2h1um1-UecmrUlzlPoGyg-W3tx38Q"; 
 
@@ -107,8 +107,8 @@ async function analyze() {
   `;
 
   try {
-    // 👇👇👇 ¡AQUÍ ESTÁ LA MAGIA! Usamos el modelo que vimos en tu lista
-    let model = "gemini-2.0-flash-exp"; 
+    // 👇 HEMOS PUESTO EL MODELO QUE VIMOS EN TU LISTA 👇
+    let model = "gemini-2.0-flash"; 
     
     const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${API_KEY}`, {
       method: 'POST',
@@ -119,7 +119,7 @@ async function analyze() {
     const data = await response.json();
 
     if (data.error) {
-       throw new Error("Mensaje de Google: " + data.error.message);
+       throw new Error("Error de Google: " + data.error.message);
     }
 
     if (!data.candidates || !data.candidates[0].content) {
@@ -139,7 +139,7 @@ async function analyze() {
     renderResult(result);
 
   } catch (e) {
-    alert("❌ Error: " + e.message);
+    alert("❌ Algo falló: " + e.message);
   } finally {
     btn.disabled = false;
     btn.innerText = "✨ Evaluar mi respuesta";
