--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ async function analyze() {
   `;
 
   try {
-    // Usamos 'gemini-pro-latest' que aparecía en tu lista de disponibles
-    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro-latest:generateContent?key=${API_KEY}`, {
+        // Cambiamos al modelo FLASH que es el que tiene cuota gratis
+    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-flash-latest:generateContent?key=${API_KEY}`, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
