--- a/index.html
+++ b/index.html
@@ -92,16 +92,34 @@
     <button class="btn-main" style="margin-top:20px; background:#e2e8f0; color:var(--text);" onclick="resetApp()">🔄 Try another topic</button>
   </div>
 
-  <div class="footer-section">
+    <div class="footer-section">
     <img src="david.PNG" alt="David Martín" class="profile-img" onerror="this.src='https://cdn-icons-png.flaticon.com/512/3135/3135715.png'">
+    
     <h3 style="margin: 0 0 5px 0;">David Martín</h3>
-    <p style="margin: 0 0 20px 0; font-size: 0.9rem; color: #64748b;">Spanish Teacher at <strong>Ardgillan Community College</strong>.</p>
+    <p style="margin: 0 0 20px 0; font-size: 0.9rem; color: #64748b;">Spanish Teacher at <strong>Ardgillan Community College</strong>, Balbriggan.</p>
+    
     <div class="bio-text">
-      <p><em>As a teacher, my goal is to create innovative resources that empower students through technology. I believe in using tools like AI responsibly to help students prepare for their official exams.</em></p>
-      <p><em>Mi objetivo es crear recursos innovadores que fomenten un uso responsable y eficiente de la tecnología en la preparación de los exámenes oficiales.</em></p>
+      <p><em>As a teacher, my passion is creating innovative tools to help students prepare for their Junior and Leaving Cert. I believe in using technology responsibly to achieve the best results.</em></p>
+      <p><em>Como profesor, mi pasión es crear herramientas innovadoras que ayuden a los estudiantes en su preparación para el Junior y Leaving Cert, fomentando un uso responsable de la tecnología.</em></p>
     </div>
-    <a href="https://revolut.me/davidkhy4/pocket/TbT6B5Grkq" target="_blank" class="revolut-btn">☕ Support this Project</a>
-    <p style="font-size: 0.85rem; margin-top: 20px; color: #64748b;">Contact: <a href="mailto:david.martin@ardgillancc.ie" class="contact-link">david.martin@ardgillancc.ie</a></p>
+
+    <a href="https://revolut.me/davidkhy4/pocket/TbT6B5Grkq" target="_blank" class="revolut-btn">
+      <span>☕</span> Support the Project
+    </a>
+
+    <div class="disclaimer" style="margin-top: 25px; font-size: 0.9rem; line-height: 1.6; color: #475569;">
+      <p>
+        <strong>English:</strong> All these resources are, and will always be, 100% free. However, if this tool has been useful to you and you wish to support the creation of more materials like this, your contribution is essential to keep the project moving forward. Thank you for your support!
+      </p>
+      <p>
+        <strong>Español:</strong> Todos estos recursos son, y siempre serán, 100% gratuitos. No obstante, si esta herramienta te ha resultado útil y quieres apoyar la creación de este tipo de materiales, tu ayuda es esencial para que este proyecto pueda continuar. ¡Gracias por tu apoyo!
+      </p>
+    </div>
+
+    <p style="font-size: 0.85rem; margin-top: 25px; color: #64748b;">
+      Suggestions or questions? Contact me at:<br>
+      <a href="mailto:david.martin@ardgillancc.ie" class="contact-link">david.martin@ardgillancc.ie</a>
+    </p>
   </div>
 </div>
 
